--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
   width: 70%;
   margin: auto;
   text-align: center;
+  color: #f8efd4;
 }
 
 .dice {
@@ -19,12 +20,10 @@ h1 {
   font-family: 'Sriracha', cursive;
   text-shadow: 5px 0 #232931;
   font-size: 6rem;
-  color: #f8efd4;
 }
 
 p {
   font-size: 2rem;
-  color: #f8efd4;
   font-family: 'Comfortaa', cursive;
 }
 
@@ -32,8 +31,17 @@ img {
   width: 80%;
 }
 
+h4 {
+  text-transform: uppercase;
+  font-family: 'Comfortaa', cursive;
+}
+
+a {
+  color: inherit;
+}
+
 footer {
-  margin-top: 5%;
+  margin-top: 3%;
   color: #edc988;
   text-align: center;
   font-family: 'Comfortaa', cursive;
